--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <title></title>
 </head>
 <body>
-  <h1>Look at all the colors!</h1>
+  <h1>Look at all the colors!!</h1>
   <div id="wrapper">
     <div id="tR"></div>
     <div id="tL"></div>
     <div id="bL"></div>
     <div id="bR"></div>
   </div>
+
+  <!-- test -->
 
 <script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
 <script type="text/javascript" src="colors.js"></script>
